--- a/package.json
+++ b/package.json
@@ -1,22 +1,31 @@
 {
-  "name": "jsmecommerce",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.0.9",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.12",
-    "@types/react": "17.0.38",
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.9",
-    "typescript": "4.5.5"
-  }
+	"name": "next-preact-tailwind-boilerplate",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"next": "^12.0.9",
+		"next-plugin-preact": "^3.0.6",
+		"preact": "^10.6.5",
+		"preact-render-to-string": "^5.1.19",
+		"react": "npm:@preact/compat@^17.0.3",
+		"react-dom": "npm:@preact/compat@^17.0.3",
+		"react-ssr-prepass": "npm:preact-ssr-prepass@^1.2.0",
+		"sass": "^1.49.0",
+		"scheduler": "^0.20.2"
+	},
+	"devDependencies": {
+		"@types/node": "17.0.12",
+		"@types/react": "17.0.38",
+		"autoprefixer": "^10.4.2",
+		"eslint": "8.7.0",
+		"eslint-config-next": "12.0.9",
+		"postcss": "^8.4.5",
+		"tailwindcss": "^3.0.17",
+		"typescript": "4.5.5"
+	}
 }
